# scylladb-docs-developers

./: .gitignore  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: docs-pages.yaml  docs-pr.yaml
docs/: Makefile
docs/_utils/: deploy.sh  redirects.yaml
docs/ext/: card_box.py  signup.py
docs/source/: conf.py  index.rst  tutorials.md
docs/source/_static/css/: custom.css
docs/source/_static/img/: shard-per-core-no-bg.json  shard-per-core-no-bg.lottie
docs/source/_static/js/: heap.js
docs/source/compare/: aerospike.rst  index.rst
docs/source/getting-started/: differentiators.rst  index.rst  what.rst
docs/source/getting-started/dynamodb/: index.rst
docs/source/getting-started/dynamodb/considerations/: alternator-or-cql.rst  index.rst  maximizing-throughput.rst  migration-paths.rst  reducing-costs.rst  understanding-differences.rst
docs/source/getting-started/dynamodb/cost/: billing.rst  calculator.rst  dax.rst  global-tables.rst  index.rst  pricing.rst  scenarios.rst  units.rst
docs/source/getting-started/dynamodb/fit/: freedom-from-lock-in.rst  improving-latency.rst  index.rst  (+2 more)
docs/source/tutorials/: index.rst
source/: conf.py  index.rst  projects.md  tutorials.md
source/_static/css/: custom.css
source/projects/: index.rst
source/projects/timeseries/: index.rst
source/projects/timeseries/deployment/: cloud.md  docker.md  index.rst  kubernetes.md
source/projects/timeseries/drivers/: go.md  index.rst  rust.md
source/projects/timeseries/migration/: cassandra.md  dynamodb.md  index.rst  mongodb.md
(+33 files in other folders)
