[project]
name = "sphinx-docs"
description = "ScyllaDB Developers Documentation"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "pygments>=2.18.0",
    "sphinx-scylladb-theme>=1.9.1",
    "sphinx-sitemap>=2.9.0",
    "sphinx-autobuild>=2025.08.25",
    "sphinx-reredirects>=0.1.6",
    "sphinx>=9.0",
    "sphinx-multiversion-scylla>=0.3.8",
    "redirects_cli>=0.1.3",
]

[tool.uv]
package = false
